Issue 35178: PK violation when creating multiple workbooks simultaneously
Rework testSynchronization() to reproduce #35178. Set testTransacted = false to see the failure.

Log more lock information. Turn on debug logging for PropertyManager.

Refactor createRaces() test helper to fail fast when any runnable throws and to propagate exceptions to the test harness.