@@ -125,14 +125,14 @@ public class CaseInsensitiveHashMap<V> extends CaseInsensitiveMapWrapper<V> impl
         {
             Map<String, Integer> map = new CaseInsensitiveHashMap<>();
             map.put("a", 2);
-            assertEquals(new Integer(2), map.put("A", 3));
+            assertEquals(Integer.valueOf(2), map.put("A", 3));
             assertEquals(1, map.size());
         }
 
         @Test
         // Our original CaseInsensitiveHashMap had a get() method that mutated state, which lead to thread safety issues in
         // multi-threaded usages. This test was developed to demonstrate and fix that problem.
-        public void multiThreadStressTest() throws InterruptedException
+        public void multiThreadStressTest() throws Throwable
         {
             final int races = 1000;
             final int threads = 5;
